scanpci: Build fix for systems without <err.h>

https://bugs.freedesktop.org/show_bug.cgi?id=31133

Signed-off-by: Jeremy Huddleston <jeremyhu@apple.com>